service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: sd
spec:
  selector:
    app: flask-app
  ports:
    - port: 82
      targetPort: 6002
      nodePort: 30082
  type: NodePort
